--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -209,7 +209,6 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a {
 	width:600px!important;
 }
 .zmi-container {
-	background-color:#EEE;
 	width:800px!important;
 }
 .zmi-container > .zmi-item > .right {
@@ -222,12 +221,14 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a {
 }
 .zmi-container .zmi-item.pageelement .center .zmiRenderShort {
 	border:1px solid white;
-	padding:3px 6px;
+	padding:3px 6px 3px 1.5em;
 	overflow:hidden;
 	background-color:white!important;
 	min-height:3.5em;
 }
-
+.zmi-container .zmi-item.pageelement .center > * {
+	padding-left:1.5em;
+}
 .zmi-sitemap .inactive a { 
 	color:#999; 
 }
@@ -252,8 +253,7 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a {
 	margin:8px;
 }
 .zmi-container .zmi-item .zmi-action {
-	margin-left:-158px;
-	display:block;
+	margin-left:-159px;
 }
 .zmi-container .zmi-item .zmi-action .split-left {
 	width:160px;
@@ -276,8 +276,17 @@ button.split-left {
 .split-right {
 	height:2.1em;
 }
-.zmi.main form {
-	margin: 0 1em;
+.pages .btn.split-right {
+	background-color: #eee;
+	background-image: -moz-linear-gradient(top,#fcfcfc,#e9e9e9);
+	background-image: -webkit-gradient(linear,0 0,0 100%,from(#fcfcfc),to(#e9e9e9));
+	background-image: -webkit-linear-gradient(top,#fcfcfc,#e9e9e9);
+	background-image: -o-linear-gradient(top,#fcfcfc,#e9e9e9);
+	background-image: linear-gradient(to bottom,#fcfcfc,#e9e9e9);
+	border-right:1px solid #bbb;
+}
+.zmi-container.pages .zmi-item .zmiRenderShort {
+	padding-left:1.0em !important
 }
 form.form-horizontal {
 	background-color:#fff;
@@ -511,7 +520,6 @@ body.metas table.table.zmi-sortable input {
 .ZMSSqlDb .table tr td {
 	padding:6px;
 	font-size:11px;
-	overflow:hidden;
 }
 .ZMSSqlDb .table tr th:first-child .checkbox,
 .ZMSSqlDb .table tr td:first-child .checkbox  {
@@ -521,6 +529,11 @@ body.metas table.table.zmi-sortable input {
 .ZMSSqlDb .table tr th:first-child .split-right,
 .ZMSSqlDb .table tr td:first-child .split-right {
 	height:auto;
+}
+
+.ZMSSqlDb #attrProperties .control-group select,
+.ZMSSqlDb #attrProperties .control-group input {
+	width:167px;
 }
 
 /* +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
@@ -546,12 +559,21 @@ div.zmi-action > ul.dropdown-menu li a {
 padding-left:13px;
 }
 div.right .zmi-ids input[type="checkbox"] {
-margin-left:8px !important;
-margin-top:0px;
+	margin-left: 3px;
+	margin-top: 3px;
+	opacity: 0.5;
 }
 div.right span.form-small {
-display: inline-block;
-color:#888;
+	display: block;
+	color:#888;
+	margin-left: 8px;
+}
+div.right .version_object_state {
+	display: inline !important;
+}
+div.right a:hover, 
+div.right a:focus {
+	text-decoration:none;
 }
 ul.zmi-container > li.zmi-item > div.center .zmiRenderShort {
 border-left:none !important;
@@ -618,20 +640,21 @@ div.right .btn .caret {
 		width: 100% !important;
 	}
 	.zmi-item {
-	border-left:0px solid #ddd;
+		border-left:0px solid #ddd;
 	}
+	.right span,
 	.right span.form-small,
 	.right span.zmi-ids {
 		display:none !important;
 	}
 	.zmi-container .center .zmiRenderShort {
-		padding-left:36px !important
+		padding-left:3em !important
 	}
-	.zmi-container .pages .contentEditable.form-label {
-		padding-left:0px !important
+	.zmi-container.pages .center .zmiRenderShort {
+		padding-left:2.5em !important
 	}
 	img.grippy {
-			visibility:hidden;
+		visibility:hidden;
 	}
 	.brand .slogan {
 		display:none;
