--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -284,6 +284,9 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a {
 	visibility:hidden;
 	text-align:left;
 }
+.zmi-container .zmi-item .zmi-action .icon-chevron-down {
+	font-size:12px;
+}
 .split-left {
 	color:#08c;
 	font-weight:bold;
@@ -531,25 +534,34 @@ body.metas table.table.zmi-sortable input {
 
 
 /* +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
- * +- [ZMI] ZMSSQLDB
+ * +- [ZMI] ZMSSQLDB / ZMSRecordset
  * +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
  */
+
+.ZMSRecordSet .pagination,
 .ZMSSqlDb .pagination {
 	white-space:nowrap;
 }
+.ZMSRecordSet .table tr td:first-child,
 .ZMSSqlDb .table tr td:first-child {
 	width:84px;
 }
+.ZMSRecordSet .table tr th,
+.ZMSRecordSet .table tr td,
 .ZMSSqlDb .table tr th,
 .ZMSSqlDb .table tr td {
 	padding:6px;
 	font-size:11px;
 }
+.ZMSRecordSet .table tr th:first-child .checkbox,
+.ZMSRecordSet .table tr td:first-child .checkbox,
 .ZMSSqlDb .table tr th:first-child .checkbox,
-.ZMSSqlDb .table tr td:first-child .checkbox  {
+.ZMSSqlDb .table tr td:first-child .checkbox {
 	padding:4px 4px 4px 8px;
 	font-size:11px;
 }
+.ZMSRecordSet .table tr th:first-child .split-right,
+.ZMSRecordSet .table tr td:first-child .split-right,
 .ZMSSqlDb .table tr th:first-child .split-right,
 .ZMSSqlDb .table tr td:first-child .split-right {
 	height:auto;
