added support for bootstrap (104)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -195,7 +195,7 @@ table.table.zmi-sortable input {
 table.table.zmi-sortable img.grippy {
 	margin-bottom:8px;
 }
-tr.zmi-selected td, 
+tr.zmi-selected td, tr.zmi-selected td *,
 ul.zmi-container > li.zmi-item.zmi-selected > div.center,
 ul.zmi-container > li.zmi-item.zmi-selected > div.center .zmiRenderShort,
 ul.zmi-container > li.zmi-item.zmi-selected > div.center a {
