--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -10,7 +10,9 @@ body.zmi {
 	overflow:hidden;
 	white-space:nowrap;
 }
-
+.zmi-manage-main-change {
+	display:none;
+}
 .zmi-helper-hidden, .ui-helper-hidden {
 	display:none!important;
 }
@@ -197,8 +199,7 @@ tr.zmi-selected td, tr.zmi-selected td *,
 ul.zmi-container > li.zmi-item.zmi-selected > div.center,
 ul.zmi-container > li.zmi-item.zmi-selected > div.center .zmiRenderShort,
 ul.zmi-container > li.zmi-item.zmi-selected > div.center a {
-	background-color:#08c!important;
-	color:#fff!important;
+	background-color:#ffc!important;
 }
 
 #manage_addProduct .zmiRenderShort {
@@ -234,7 +235,6 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a {
 	width:800px!important;
 }
 .zmi-container > .zmi-item > .right {
-	display:none;
 	float:left;
 	width:200px!important;
 }
@@ -282,9 +282,6 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a {
 	width:160px;
 	visibility:hidden;
 	text-align:left;
-}
-.zmi-container .zmi-item .zmi-action .icon-chevron-down {
-	font-size:12px;
 }
 .split-left {
 	color:#08c;
@@ -591,7 +588,7 @@ div.zmi-action > ul.dropdown-menu .icon-sort-down {
 	margin: 0px -2px 0px 2px;
 }
 div.zmi-action > ul.dropdown-menu li a {
-padding-left:13px;
+	padding-left:13px;
 }
 div.right .zmi-ids input[type="checkbox"] {
 	margin-left: 3px;
@@ -599,6 +596,7 @@ div.right .zmi-ids input[type="checkbox"] {
 	opacity: 0.5;
 }
 div.right span.form-small {
+	display: block;
 	color:#888;
 	margin-left: 8px;
 }
