added support for bootstrap (110)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -796,6 +796,10 @@ div.right .btn .caret {
 
 }
 
+.ui-dialog .ui-dialog-title {
+	padding:0!important;
+}
+
 button.ui-dialog-titlebar-close {
 	color: #FFF!important;
 	background-color: #999!important;
