--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -199,6 +199,11 @@ table.table.zmi-sortable select.zmi-sort {
 table.table.zmi-sortable input {
 	margin-bottom:10px;
 }
+
+.col_min {width:1em}
+.col_max {width:100%}
+.row_insert .language_id input {width:36px;}
+
 .zmi-item img.grippy {
 	position:absolute;
 	display:block;
