ZMS3: set right-column width to 20%

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -293,6 +293,7 @@ ul.zmi-container {
 }
 ul.zmi-container > .zmi-item > .right {
 	float:left;
+	width:20% !important;
 }
 ul.zmi-container .zmi-item .clearboth {
 	float:none;
