ZMS3: styled cursor of editable ZMI elements

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -218,6 +218,9 @@ ul.zmi-container {
 	margin-top:0;
 	margin-bottom:0;
 }
+ul.zmi-container .contentEditable {
+	cursor:pointer;
+}
 ul.zmi-container li.zmi-item,
 ul.zmi-container li.ui-state-highlight {
 	list-style-type:none;
