ZMS3: added edit tab to config menu for getting back into production mode

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -113,6 +113,9 @@ textarea.zmi-helper-hidden, textarea.ui-helper-hidden {
 	margin-top:0.5em;
 	padding-left:1em;
 }
+.zmi.customize .main-nav {
+	min-width:1160px
+}
 .zmi .navbar-inner {
 	border-radius:0 !important;
 }
