--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -348,14 +348,21 @@ ul.zmi-container .zmi-item.pageelement .center .contentEditable {
 	margin-top:2.1em;
 }
 
-.form-horizontal label.col-sm-3.control-label,
-.form-horizontal label.col-md-3.control-label,
-.form-horizontal label.col-lg-3.control-label,
-.form-horizontal label.col-sm-2.control-label,
-.form-horizontal label.col-md-2.control-label,
-.form-horizontal label.col-lg-2.control-label {
+.form-horizontal label.control-label {
 	font-weight: normal;
 	color: #75A7C0;
+}
+.form-horizontal .has-success label.control-label {
+	font-weight: bold;
+	color: #3C763D;
+}
+.form-horizontal .has-warning label.control-label {
+	font-weight: bold;
+	color: #8A6D3B;
+}
+.form-horizontal .has-error label.control-label {
+	font-weight: bold;
+	color: #A94442;
 }
 .form-horizontal .col-lg-10 .form-control {
 /* overwrite jquery-ui with bootstrap-defaults */
