--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -1448,3 +1448,14 @@ body.tasks .zmi-container .center .contentEditable {
 #zmiIframeAddDialog #form0 input.hasDatepicker{
 	z-index: 2000;
 }
+.zmi.zmslog .logitem {
+	margin-top:2em;
+}
+.zmi.zmslog .logitem span.pull-left {
+	padding:0 .5em;
+	font-size:200%;
+	color:#c7254e;
+}
+.zmi.zmslog .logitem code {
+	white-space:pre-wrap !important;
+}
